# MOSP

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  README.md  run_command.txt
bench/: README.md
bench/configs/: completion.yaml  nyc_hybrid_corridor_pulsea.yaml  nyc_hybrid_corridor_pulsea_repair.yaml  nyc_ltmoa_array_pmr.yaml  nyc_ltmoa_parallel_pmr.yaml  nyc_parallel_timecap_large.yaml  scaling.yaml  timecap.yaml
bench/datasets/: README.md
bench/manifests/datasets/: nyc_3obj.json
bench/manifests/query_sets/: nyc_88959_96072.json  nyc_query6_pair.json  nyc_query6_single.json  nyc_trivial_completion.json
bench/queries/: README.md
bench/results/: README.md
bench/scripts/: aggregate_results.py  plot_results.py  run_benchmark.py  run_benchmarks.py
bench/synthetic/: README.md
data/synthetic/: README.md  expected_frontier_example.csv
docs/: benchmark-protocol.md  benchmark-quickstart.md  metrics-definition.md  reproducibility.md
inc/: common_inc.h
inc/algorithms/: abstract_solver.h  emoa.h  hybrid_corridor_pulsea.h  lazy_ltmoa.h  lazy_ltmoa_array.h  ltmoa.h  ltmoa_array.h  ltmoa_array_superfast.h  ltmoa_array_superfast_anytime.h  ltmoa_array_superfast_lb.h  ltmoa_parallel.h  nwmoa.h  sopmoa.h  sopmoa_bucket.h  sopmoa_relaxed.h
inc/algorithms/gcl/: gcl.h  gcl_array.h  gcl_fast_array.h  gcl_nwmoa.h  gcl_owner_sharded.h  gcl_relaxed.h  gcl_relaxed_serial.h  gcl_sopmoa.h  gcl_tree.h
inc/problem/: graph.h  heuristic.h  lower_bound_oracle.h
inc/utils/: benchmark_metrics.h  cost.h  data_io.h  label_arena.h  linkedlist.h  pq_bucket.h  thread_config.h
notes/: agent_memory_log.md  paper_note_ltmoa_fast_parallel_2026-04-10.md  paper_reading_roadmap_mosp_moa.md  roadmap.md
notes/benchmarks/2026-04-11-nyc-reliable/: README.md  historical_summary_from_notes.md  nyc_parallel_relaxed_3x.csv  nyc_serial_core_3x.csv
notes/benchmarks/2026-04-12-hybrid-corridor-pulsea/: README.md  nyc_hybrid_corridor_pulsea_5x_summary.csv
notes/benchmarks/2026-04-12-hybrid-corridor-pulsea-repair/: README.md  nyc_hybrid_corridor_pulsea_repair_5x_summary.csv
notes/benchmarks/2026-04-12-nyc-parallel-large/: README.md  nyc_parallel_2thread_5x.csv
notes/benchmarks/2026-04-12-pmr-allocators/: README.md  nyc_ltmoa_array_pmr_3x_summary.csv  nyc_ltmoa_parallel_pmr_5x_summary.csv
scripts/: benchmark_suite.py  benchmark_wall_clock.py  run_correctness_harness.sh
skills/mosp-cpp-performance-engineer/: SKILL.md
skills/mosp-cpp-performance-engineer/agents/: openai.yaml
skills/mosp-cpp-performance-engineer/references/: benchmarking-playbook.md  report-template.md
skills/multiobjective-search-inventor/: SKILL.md
skills/multiobjective-search-inventor/agents/: openai.yaml
skills/multiobjective-search-inventor/references/: algorithm-patterns.md  dominance-idea-catalog.md  novelty-checklist.md  output-templates.md  paper-roadmap.md  uploaded-checklist.md  web-scouting.md
src/: main.cpp
src/algorithms/: emoa.cpp  hybrid_corridor_pulsea.cpp  lazy_ltmoa.cpp  lazy_ltmoa_array.cpp  ltmoa.cpp  ltmoa_array.cpp  ltmoa_array_superfast.cpp  ltmoa_array_superfast_anytime.cpp  ltmoa_array_superfast_lb.cpp  ltmoa_parallel.cpp  nwmoa.cpp  sopmoa.cpp  sopmoa_bucket.cpp  sopmoa_relaxed.cpp
src/problem/: graph.cpp  lower_bound_oracle.cpp
src/utils/: benchmark_metrics.cpp  data_io.cpp
tests/: benchmark_metrics_smoke.cpp  benchmark_runner_smoke.py  cli_validation_smoke.py  correctness_harness.cpp  hybrid_corridor_pulsea_regression.cpp  linkedlist_smoke.cpp  ltmoa_frontier_regression.cpp  pq_bucket_smoke.cpp  thread_config_smoke.cpp
